--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">SCRATCH COURSE</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="#">SCRATCH COURSE</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">Download Docs</a></div>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://github.com/peaceall236/scratch_class/releases/download/scratch_complete/scratch.complete.zip">Download Docs</a></div>
         </div>
     </nav>
 </section>
